--- a/contact_us.html
+++ b/contact_us.html
@@ -42,17 +42,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -60,7 +59,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -99,13 +98,13 @@
           <h1>Strengthening ocean monitoring for a resilient and sustainable future</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -125,12 +124,12 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <a href="mailto:nelly.florida@bmkg.go.id" target="_blank"><img src="figures/contact_chair.jpg" alt="contact_chair" /></a>
+          <a href="mailto:nelly.florida@bmkg.go.id"><img src="figures/contact_chair.jpg" alt="contact_chair" /></a>
         </figure>
      </div>
      <div class="twoparts-right">
         <figure>
-          <a href="mailto:lbraasch@ucsd.edu" target="_blank"><img src="figures/contact_vicechair.jpg" alt="contact_vicechair" /></a>
+          <a href="mailto:lbraasch@ucsd.edu"><img src="figures/contact_vicechair.jpg" alt="contact_vicechair" /></a>
         </figure>
      </div>
     </div>
@@ -139,12 +138,12 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <a href="mailto:cgallage@wmo.int" target="_blank"><img src="figures/contact_WMO.jpg" alt="contact_WMO" /></a>
+          <a href="mailto:cgallage@wmo.int"><img src="figures/contact_WMO.jpg" alt="contact_WMO" /></a>
         </figure>
      </div>
      <div class="twoparts-right">
         <figure>
-          <a href="mailto:ioc.secretariat@unesco.org" target="_blank"><img src="figures/contact_IOC.jpg" alt="contact_IOC" /></a>
+          <a href="mailto:ioc.secretariat@unesco.org"><img src="figures/contact_IOC.jpg" alt="contact_IOC" /></a>
         </figure>
      </div>
     </div>
