--- a/data_access.html
+++ b/data_access.html
@@ -42,17 +42,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -60,7 +59,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -99,13 +98,13 @@
           <h1>Connecting you to the ocean: fast, reliable, and open access to buoy data</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -128,17 +127,17 @@
         </p>
         <p style="text-align: left">
           <ul class="custom-bullets">
-            <li style="text-align: left">What is a <a href="https://community.wmo.int/en/activity-areas/global-telecommunication-system-gts" target="_blank">GTS</a></li>
-            <li style="text-align: left"><a href="https://esurfmar.meteo.fr/qctools/" target="_blank">Graphical views of GTS data for 16 days, for active buoys, by MeteoFrance</a></li>
-            <li style="text-align: left"><a href="https://community.wmo.int/en/activity-areas/wis/wis2-implementation" target="_blank">The WMO Information System WIS2.0</a></li>
+            <li style="text-align: left">What is a <a href="https://community.wmo.int/en/activity-areas/global-telecommunication-system-gts">GTS</a></li>
+            <li style="text-align: left"><a href="https://esurfmar.meteo.fr/qctools/">Graphical views of GTS data for 16 days, for active buoys, by MeteoFrance</a></li>
+            <li style="text-align: left"><a href="https://community.wmo.int/en/activity-areas/wis/wis2-implementation">The WMO Information System WIS2.0</a></li>
           </ul>
         </p>
         <h3>Near-real time and Archived data</h3>
         <p style="text-align: left">
           <ul class="custom-bullets">
-            <li style="text-align: left">Canada's <a href="https://www.dfo-mpo.gc.ca/science/data-donnees/drib-bder/index-eng.html" target="_blank">Integrated Science Data management center</a> provides an archive of all buoy data on behalf of the DBCP and GOOS. Data coming from the GTS is usually available via the ISDM web site within 2 months of observation.</li>
-            <li style="text-align: left">The USA <a href="https://www.nodc.noaa.gov/access/" target="_blank">National Oceanographic Data center (NODC)</a> provides an archive of a subset of buoy data and the US <a href="http://www.ncdc.noaa.gov/oa/marine.html" target="_blank">National Climate Data Center (NCDC)</a> provides an archive of surface data.</li>
-            <li style="text-align: left"><a href="https://www.coriolis.eu.org/Data-Products/Data-selection" target="_blank">Coriolis</a> in France provides access to most buoy data on the GTS</li>
+            <li style="text-align: left">Canada's <a href="https://www.dfo-mpo.gc.ca/science/data-donnees/drib-bder/index-eng.html">Integrated Science Data management center</a> provides an archive of all buoy data on behalf of the DBCP and GOOS. Data coming from the GTS is usually available via the ISDM web site within 2 months of observation.</li>
+            <li style="text-align: left">The USA <a href="https://www.nodc.noaa.gov/access/">National Oceanographic Data center (NODC)</a> provides an archive of a subset of buoy data and the US <a href="http://www.ncdc.noaa.gov/oa/marine.html">National Climate Data Center (NCDC)</a> provides an archive of surface data.</li>
+            <li style="text-align: left"><a href="https://www.coriolis.eu.org/Data-Products/Data-selection">Coriolis</a> in France provides access to most buoy data on the GTS</li>
           </ul>
         </p>
     </div>
@@ -147,16 +146,16 @@
         <h3>References</h3>
         <p style="text-align: left">
           <ul class="custom-bullets">
-            <li style="text-align: left"><a href="https://community.wmo.int/en/resolution-40" target="_blank">WMO data policy Resolution 40</a></li>
-            <li style="text-align: left"><a href="https://oceanexpert.org/document/251" target="_blank">IODE data policy</a></li>
-            <li style="text-align: left"><a href="" target="_blank">CLIVAR data policy</a></li>
-            <li style="text-align: left"><a href="https://isdm.gc.ca/isdm-gdsi/index-eng.html" target="_blank">ISDM (Canada) Scientific Data and Products</a></li>
-            <li style="text-align: left"><a href="https://www.aoml.noaa.gov/phod/gdp/data.php" target="_blank">AOML Data Assembly Center (Drifter Data)</a></li>
-            <li style="text-align: left"><a href="https://www.ndbc.noaa.gov/" target="_blank">NOAA National Data Buoy Center (NDBC)</a></li>
-            <li style="text-align: left"><a href="https://www.ncei.noaa.gov/access/marine-environmental-buoy-database/" target="_blank">NOAA Marine Environmental Buoy Database (NODC)</a></li>
-            <li style="text-align: left">Global Data Assembly Centers: <a href="ftp://ftp.ifremer.fr/ifremer/oceansites/" target="_blank">IFREMER Coriolis (FTP)</a> & <a href="https://dods.ndbc.noaa.gov/thredds/catalog/oceansites/catalog.html" target="_blank">US NDBC</a></li>
-            <li style="text-align: left"><a href="https://www.coriolis.eu.org/Data-Products/Argo-floats-dashboard" target="_blank">Global Data Assembly Center - Coriolis</a></li>
-            <li style="text-align: left"><a href="https://www.clivar.org/resources/data/data-policy" target="_blank">CLIVAR data policy</a></li>
+            <li style="text-align: left"><a href="https://community.wmo.int/en/resolution-40">WMO data policy Resolution 40</a></li>
+            <li style="text-align: left"><a href="https://oceanexpert.org/document/251">IODE data policy</a></li>
+            <li style="text-align: left"><a href="">CLIVAR data policy</a></li>
+            <li style="text-align: left"><a href="https://isdm.gc.ca/isdm-gdsi/index-eng.html">ISDM (Canada) Scientific Data and Products</a></li>
+            <li style="text-align: left"><a href="https://www.aoml.noaa.gov/phod/gdp/data.php">AOML Data Assembly Center (Drifter Data)</a></li>
+            <li style="text-align: left"><a href="https://www.ndbc.noaa.gov/">NOAA National Data Buoy Center (NDBC)</a></li>
+            <li style="text-align: left"><a href="https://www.ncei.noaa.gov/access/marine-environmental-buoy-database/">NOAA Marine Environmental Buoy Database (NODC)</a></li>
+            <li style="text-align: left">Global Data Assembly Centers: <a href="ftp://ftp.ifremer.fr/ifremer/oceansites/">IFREMER Coriolis (FTP)</a> & <a href="https://dods.ndbc.noaa.gov/thredds/catalog/oceansites/catalog.html">US NDBC</a></li>
+            <li style="text-align: left"><a href="https://www.coriolis.eu.org/Data-Products/Argo-floats-dashboard">Global Data Assembly Center - Coriolis</a></li>
+            <li style="text-align: left"><a href="https://www.clivar.org/resources/data/data-policy">CLIVAR data policy</a></li>
           </ul>
         </p>
     </div>
@@ -213,7 +212,7 @@
           <b>Quality Control</b>
           </p>
           <p style="text-align: left; ">
-          Quality control procedures are in place to ensure the usefulness of real time data and also of data archives. A well-defined feedback mechanism is required to control real time data. This is described under the <a href="qc.html" target="_blank">DBCP QC Guidelines page</a>.
+          Quality control procedures are in place to ensure the usefulness of real time data and also of data archives. A well-defined feedback mechanism is required to control real time data. This is described under the <a href="qc.html">DBCP QC Guidelines page</a>.
           </p>
         </figure>
     </div>
@@ -237,7 +236,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
-          <a href="data_uses.html" target="_blank">
+          <a href="data_uses.html">
             <p style="text-align: center; ">Uses of buoy data</p>
           </a>
         </figure>
@@ -245,7 +244,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
-          <a href="qc.html" target="_blank">
+          <a href="qc.html">
             <p style="text-align: center; ">Data quality control</p>
           </a>
         </figure>
@@ -253,7 +252,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_oceanops.jpg" alt="related articles"/>
-          <a href="https://www.ocean-ops.org/board" target="_blank">
+          <a href="https://www.ocean-ops.org/board">
             <p style="text-align: center; ">OceanOPS Dashboard</p>
           </a>
         </figure>
@@ -261,7 +260,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">Buoy networks and platform</p>
           </a>
         </figure>
