--- a/data_uses.html
+++ b/data_uses.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>Drifting with purpose, anchored in science – advancing climate, safety, and sustainability</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -135,8 +134,8 @@
         </figure>
         <p style="text-align: left"><b>Marine Safety and Hurricane Forecasting</b></p>
         <p style="text-align: left">
-          During hurricane season, specialized drifting buoys deployed ahead of approaching storms (such as the <a href="https://globalocean.noaa.gov/eight-drifting-buoys-deployed-in-front-of-hurricane-teddy/" target="_blank">Air-Launched Autonomous Micro Observer units used by NOAA's Hurricane Research Division</a>) measure subsurface ocean temperatures down to 200 meters depth. This data reveals available <a href="https://globalocean.noaa.gov/research/extreme-events-program/" target="_blank">heat content</a> - the primary energy source for storm intensification - allowing forecasters to predict sudden strengthening events with greater precision. 
-          The Global Drifter Program reports that data from these buoys has <a href="https://www.aoml.noaa.gov/phod/gdp/" target="_blank">improved hurricane intensity forecasts significantly in recent years</a>. While the exact impact on maritime safety is harder to quantify, the <a href="https://www.imo.org/en/OurWork/Safety/Pages/Default.aspx" target="_blank">International Maritime Organization's guidelines</a> recognize that buoy data contributes significantly to weather routing and collision avoidance systems. By combining surface observations with subsurface profiles, buoy arrays create a complete vertical picture of marine conditions that satellites alone cannot provide, making them indispensable for both short-term marine safety and long-term climate monitoring.
+          During hurricane season, specialized drifting buoys deployed ahead of approaching storms (such as the <a href="https://globalocean.noaa.gov/eight-drifting-buoys-deployed-in-front-of-hurricane-teddy/">Air-Launched Autonomous Micro Observer units used by NOAA's Hurricane Research Division</a>) measure subsurface ocean temperatures down to 200 meters depth. This data reveals available <a href="https://globalocean.noaa.gov/research/extreme-events-program/">heat content</a> - the primary energy source for storm intensification - allowing forecasters to predict sudden strengthening events with greater precision. 
+          The Global Drifter Program reports that data from these buoys has <a href="https://www.aoml.noaa.gov/phod/gdp/">improved hurricane intensity forecasts significantly in recent years</a>. While the exact impact on maritime safety is harder to quantify, the <a href="https://www.imo.org/en/OurWork/Safety/Pages/Default.aspx">International Maritime Organization's guidelines</a> recognize that buoy data contributes significantly to weather routing and collision avoidance systems. By combining surface observations with subsurface profiles, buoy arrays create a complete vertical picture of marine conditions that satellites alone cannot provide, making them indispensable for both short-term marine safety and long-term climate monitoring.
         </p>
      </div>
     <div class="content">
@@ -200,7 +199,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_deployment.jpg" alt="related articles"/>
-          <a href="deployment.html" target="_blank">
+          <a href="deployment.html">
             <p style="text-align: center; ">Buoy deployment</p>
           </a>
         </figure>
@@ -208,7 +207,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">DBCP subnetworks and platforms</p>
           </a>
         </figure>
@@ -216,7 +215,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_anti_vandalism.jpg" alt="related articles"/>
-          <a href="anti_vandalism.html" target="_blank">
+          <a href="anti_vandalism.html">
             <p style="text-align: center; ">Addressing buoy vandalism</p>
           </a>
         </figure>
@@ -224,7 +223,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_e_stewardship.jpg" alt="related articles"/>
-          <a href="e_stewardship.html" target="_blank">
+          <a href="e_stewardship.html">
             <p style="text-align: center; ">Environmental stewardship</p>
           </a>
         </figure>
