--- a/deployment.html
+++ b/deployment.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
     <h1>Keep the network alive, one deployment at a time</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -162,7 +161,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_barometer_upgrade.jpg" alt="related articles"/>
-          <a href="barometer_upgrade.html" target="_blank">
+          <a href="barometer_upgrade.html">
             <p style="text-align: center; ">Barometer upgrade program</p>
           </a>
         </figure>
@@ -170,7 +169,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">DBCP subnetworks and platforms</p>
           </a>
         </figure>
@@ -178,7 +177,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
-          <a href="data_uses.html" target="_blank">
+          <a href="data_uses.html">
             <p style="text-align: center; ">What buoy data is used</p>
           </a>
         </figure>
@@ -186,7 +185,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
-          <a href="network_status_and_map.html" target="_blank">
+          <a href="network_status_and_map.html">
             <p style="text-align: center; ">DBCP network status</p>
           </a>
         </figure>
