--- a/gallery.html
+++ b/gallery.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>DBCP: supporting research, advancing ocean observations</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -115,19 +114,19 @@
 <section class="gallery">
     <div class="container">
       <h2>Photo Gallery</h2>
-      <p>Explore images of data buoys, ocean observations, and DBCP activities.</p>
+      <p>First Intergovermental Session of the IOC Sub-Commission for the Central Indian Ocean 8 - 10 April 2025 in the United Arab Emirates</p>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="figures/gallery/001.jpg" alt="Data Buoy in Ocean">
-          <div class="gallery-caption">Data buoy deployed in the Pacific Ocean</div>
+          <img src="figures/gallery/IOCINDIO-01_01.JPEG" alt="Participants of the IOCINDIO-01">
+          <div class="gallery-caption">Participants of the IOCINDIO-01</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/002.jpg" alt="Buoy Maintenance">
-          <div class="gallery-caption">Technicians performing buoy maintenance</div>
+          <img src="figures/gallery/IOCINDIO-01_02.JPEG" alt="Dr. Nelly Riama, the DBCP Chair, presented at the IOCINDIO-01">
+          <div class="gallery-caption">Dr. Nelly Riama, the DBCP Chair, presented at the IOCINDIO-01</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/003.jpg" alt="Buoy Deployment">
-          <div class="gallery-caption">Buoy deployment during a research mission</div>
+          <img src="figures/gallery/IOCINDIO-01_03.JPEG" alt="Dr. Udaya Bhaskar (most left) and Dr. Aneesh Lotliker from the INCOIS with Dr. Nelly Riama, at the IOCINDIO-01">
+          <div class="gallery-caption">Dr. Nelly Riama, Dr. Udaya Bhaskar (INCOIS) and Dr. Aneesh Lotliker (INCOIS) at the IOCINDIO-01</div>
         </div>
       </div>
     </div>
@@ -135,24 +134,54 @@
 
 <section class="gallery">
     <div class="container">
-      <p>Explore images of data buoys, ocean observations, and DBCP activities.</p>
+      <p>Data buoys, ocean observations, and DBCP activities.</p>
+
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="figures/gallery/004.jpg" alt="Ocean Observation">
-          <div class="gallery-caption">Buoy capturing oceanographic data</div>
+          <img src="figures/gallery/SAIC_Tsunami_Buoy.JPG" alt="SAIC tsunami buoy">
+          <div class="gallery-caption">Science Applications International Corporation (SAIC) Tsunami Buoy (STB) system by the Far Eastern Ecological Center, Yuzhno-Sakhalinsk, for the Far Eastern Regional Hydrometeorological Research Institute (FERHRI), Vladivostok, Russian Federation</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/005.jpg" alt="DBCP Workshop">
-          <div class="gallery-caption">DBCP workshop in 2024</div>
+          <img src="figures/gallery/NOAA_tsunami_buoy2.JPG" alt="NOAA tsunami buoy">
+          <div class="gallery-caption">The NOAA NWS National Data Buoy Center (NDBC) owns, operates, and maintains a network of tsunami buoy systems strategically located in open ocean throughout the Pacific, Atlantic, and Caribbean basins to measure and transmit water level variations as tsunami waves pass</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/006.jpg" alt="Buoy in Storm">
-          <div class="gallery-caption">Buoy operating in rough seas</div>
+          <img src="figures/gallery/DART_Tsunami_Buoy2.JPG" alt="DART tsunami buoy">
+          <div class="gallery-caption">DART® real-time tsunami monitoring systems, developed by PMEL, are positioned at strategic locations throughout the ocean and play a critical role in tsunami forecasting</div>
+        </div>
+      </div>
+<br>
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="figures/gallery/PIRATA.JPG" alt="PIRATA buoys are an observatory entirely dedicated to the study of ocean-atmosphere interactions in the Tropical Atlantic">
+          <div class="gallery-caption">PIRATA buoys are an observatory entirely dedicated to the study of ocean-atmosphere interactions in the Tropical Atlantic</div>
+        </div>
+        <div class="gallery-item">
+          <img src="figures/gallery/Stratus23_buoy_maintenance.JPG" alt="Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025">
+          <div class="gallery-caption">Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025. <i>Photo: Maria Theresa Gatica (University de Concepcion, Chile)</i></div>
+        </div>
+        <div class="gallery-item">
+          <img src="figures/gallery/Triaxys.JPG" alt="TRIAXYS buoy">
+          <div class="gallery-caption">TRIAXYS buoy measures and transmits directional wave data using the TRIAXYS solid state wave sensor, which provides near real-time access to continuous wave measurements. <i>Photo: AXYS Technologies</i></div>
+        </div>
+      </div>
+<br>
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="figures/gallery/Wooden_buoy.JPG" alt="Wooden buoy">
+          <div class="gallery-caption">Biodegradable wooden buoy created by the CLS Oceania built from accoya wood</div>
+        </div>
+        <div class="gallery-item">
+          <img src="figures/gallery/WHOTS-19.JPG" alt="The WHOI Hawaii Ocean Time-series Station (WHOTS)-19 buoy after deployment, with NOAA Ship Oscar Elton Sette in the background in June 2023">
+          <div class="gallery-caption">The WHOI Hawaii Ocean Time-series Station (WHOTS)-19 buoy after deployment, with NOAA Ship Oscar Elton Sette in the background in June 2023. <i>Photo: Nico Llanos</i></div>
+        </div>
+        <div class="gallery-item">
+          <img src="figures/gallery/SVP-BRST buoys.JPG" alt="SVP-BRST buoys">
+          <div class="gallery-caption">SVP BRST buoy is a drifting buoy fitted with a Sea Surface Temperature sensor (SST), a Barometric Pressure sensor, a Drogue presence sensor, a High Resolution Sea Surface Temperature sensor (HRSST), a GPS positioning and an IRIDIUM satellite communication to transmit its data.</div>
         </div>
       </div>
     </div>
 </section>
-
 
 
 
@@ -167,7 +196,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_publications.jpg" alt="related articles"/>
-          <a href="publications.html" target="_blank">
+          <a href="publications.html">
             <p style="text-align: center;">Publications</p>
           </a>
         </figure>
@@ -175,7 +204,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_e_stewardship.jpg" alt="related articles"/>
-          <a href="e_stewardship.html" target="_blank">
+          <a href="e_stewardship.html">
             <p style="text-align: center;">Environmental stewardship</p>
           </a>
         </figure>
@@ -183,7 +212,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_anti_vandalism.jpg" alt="related articles"/>
-          <a href="anti_vandalism.html" target="_blank">
+          <a href="anti_vandalism.html">
             <p style="text-align: center;">Addressing buoy vandalism</p>
           </a>
         </figure>
@@ -191,7 +220,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_barometer_upgrade.jpg" alt="related articles"/>
-          <a href="barometer_upgrade.html" target="_blank">
+          <a href="barometer_upgrade.html">
             <p style="text-align: center;">Barometer upgrade program</p>
           </a>
         </figure>
