--- a/network_status_and_map.html
+++ b/network_status_and_map.html
@@ -43,17 +43,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -61,7 +60,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -101,13 +100,13 @@
           <h1>Mapping the seas in real time: the global buoy network at work</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -126,13 +125,13 @@
     <p style="text-align: left">
           The DBCP network is just one of the observing networks which make up the Global Ocean Observing System. The maintenance and expansion of the DBCP network is done within the context of the other networks and requirements for the integrated system.
           DBCP monthly map products are available to visualise the buoy network as images (png or pdf format).
-          The interactive Viewers are available through <a href="https://www.ocean-ops.org/board" target="_blank"> OceanOps viewer</a>. 
+          The interactive Viewers are available through <a href="https://www.ocean-ops.org/board"> OceanOps viewer</a>. 
     </p>
     <div id="map-preview"  style="text-align: center; ">
         <p id='iframe-loader'>loading maps...</p>
         <iframe style="border: 0;width: 1000px;height:720px;" onerror="document.getElementById('iframe-loader').innerHTML = 'Error while loading maps'" onload="document.getElementById('iframe-loader').style.display = 'none'"  src="https://www.ocean-ops.org/maps/static/index.html?t=dbcp"></iframe>
     </div>
-    <p style="text-align: center; " ><strong>Full screen:</strong> Go to <a target="_blank" href="https://www.ocean-ops.org/board/wa/Archives?t=dbcp" title="DBCP Monthly Maps page https://www.ocean-ops.org/board/wa/Archives?t=dbcp">Full screen Map Viewer</a></p>
+    <p style="text-align: center; " ><strong>Full screen:</strong> Go to <a href="https://www.ocean-ops.org/board/wa/Archives?t=dbcp" title="DBCP Monthly Maps page https://www.ocean-ops.org/board/wa/Archives?t=dbcp">OceanOps Map Viewer</a></p>
 
   </div>
 </section>
@@ -149,17 +148,17 @@
         <h3>Maintaining and expanding the network</h3>
         <p style="text-align: left">
           Whilst the DBCP network of over 1250 drifting buoys and 400 moored buoys was completed in 2005, there are still ongoing challenges in sustaining and improving the network. These are detailed in the
-          <a href="#" target="_blank">DBCP implementation strategy</a>.
+          <a href="#">DBCP implementation strategy</a>.
         </p>
         <p style="text-align: left">
           One of the ongoing challenges are the increasing needs of barometer upgrade. 
-          The measurement of air pressure is important for the weather forecasting. The DBCP aims to have air pressure measurements, using a Barometer Port, on as many buoys as possible focusing on high latitudes and remote ocean areas. An <a href="barometer_upgrade.html" target="_blank">upgrade scheme</a> was introduced to encourage the addition of barometers on drifters.
+          The measurement of air pressure is important for the weather forecasting. The DBCP aims to have air pressure measurements, using a Barometer Port, on as many buoys as possible focusing on high latitudes and remote ocean areas. An <a href="barometer_upgrade.html">upgrade scheme</a> was introduced to encourage the addition of barometers on drifters.
         </p>
         <p style="text-align: left">
           The buoy network is, in reality, not evenly dispersed across the whole ocean, due to difficulties in deploying buoys in very remote areas (especially the southern ocean) and because the buoys, following currents, drift out of some areas quickly or converge in other areas. This is a major challenge for the DBCP.
         </p>
         <p style="text-align: left">
-          The DBCP has an ongoing program of developing and testing new sensors and uses for drifting buoys. More detail is available on the <a href="data_uses.html" target="_blank">Data Uses</a> page.
+          The DBCP has an ongoing program of developing and testing new sensors and uses for drifting buoys. More detail is available on the <a href="data_uses.html">Data Uses</a> page.
         </p>
     </div>
  
@@ -195,7 +194,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
-          <a href="data_uses.html" target="_blank">
+          <a href="data_uses.html">
             <p style="text-align: center;">Uses of buoy data</p>
           </a>
         </figure>
@@ -203,7 +202,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_barometer_upgrade.jpg" alt="related articles"/>
-          <a href="barometer_upgrade.html" target="_blank">
+          <a href="barometer_upgrade.html">
             <p style="text-align: center; ">Barometer upgrade</p>
           </a>
         </figure>
@@ -211,7 +210,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_data_access.jpg" alt="related articles"/>
-          <a href="data_access.html" target="_blank">
+          <a href="data_access.html">
             <p style="text-align: center; ">Accessing buoy data</p>
           </a>
         </figure>
@@ -219,7 +218,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
-          <a href="qc.html" target="_blank">
+          <a href="qc.html">
             <p style="text-align: center; ">Buoy data quality control</p>
           </a>
         </figure>
