--- a/newsletter.html
+++ b/newsletter.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>Strengthening ocean monitoring for a resilient and sustainable future</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -124,7 +123,7 @@
        <!-- Right Column: Text -->
        <div class="right-text">
 
-         <a href="https://wmoomm.sharepoint.com/:b:/s/wmocpdb/EderXKE7TPdGtLUOPxzvfYQB23QhfQTDem354c6d-Iqe1w?e=4PVku2" target="_blank">
+         <a href="https://wmoomm.sharepoint.com/:b:/s/wmocpdb/EderXKE7TPdGtLUOPxzvfYQB23QhfQTDem354c6d-Iqe1w?e=4PVku2">
            <h3 style="text-align: left">Volume 1 No 1 March 2025</h3>
          </a>
          <p style="text-align: left">
@@ -135,7 +134,7 @@
            </ol>
          </p>
 
-         <a href=# target="_blank">
+         <a href=#>
            <h3 style="text-align: left">Volume 1 No 2 June 2025</h3>
          </a>
          <p style="text-align: left">
@@ -146,7 +145,7 @@
            </ol>
          </p>
 
-         <a href=# target="_blank">
+         <a href=#>
            <h3 style="text-align: left">Volume 1 No 2 September 2025</h3>
          </a>
          <p style="text-align: left">
@@ -157,7 +156,7 @@
            </ol>
          </p>
 
-         <a href=# target="_blank">
+         <a href=#>
            <h3 style="text-align: left">Volume 1 No 2 December 2025</h3>
          </a>
          <p style="text-align: left">
@@ -185,7 +184,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_sessions.jpg" alt="related articles"/>
-          <a href="sessions.html" target="_blank">
+          <a href="sessions.html">
             <p style="text-align: center; ">DBCP sessions</p>
           </a>
         </figure>
@@ -193,7 +192,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_about.jpg" alt="related articles"/>
-          <a href="about.html" target="_blank">
+          <a href="about.html">
             <p style="text-align: center; ">About DBCP</p>
           </a>
         </figure>
@@ -201,7 +200,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_contact_us.jpg" alt="related articles"/>
-          <a href="contact_us.html" target="_blank">
+          <a href="contact_us.html">
             <p style="text-align: center; ">Contact us</p>
           </a>
         </figure>
@@ -209,7 +208,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
-          <a href="network_status_and_map.html" target="_blank">
+          <a href="network_status_and_map.html">
             <p style="text-align: center; ">DBCP network status and map</p>
           </a>
         </figure>
