--- a/qc.html
+++ b/qc.html
@@ -43,17 +43,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -61,7 +60,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -101,13 +100,13 @@
           <h1>Quality matters: improving buoy data for a better ocean observation</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -121,26 +120,25 @@
 
 <section class="article-section">
   <div class="container">
+    <div class="content content-float">
     <h2>DBCP Quality Control Guidelines for GTS Buoy Data</h2>
-    <div class="content">
-     <div class="twoparts-left">
+      <figure class="floating-image" style="max-width:550px;">
+        <img src="figures/qc_guide.jpg" alt="Diagram of GTS buoy quality control process">
+      </figure>
+
+      <div class="text-content">
         <p style="text-align: left">
-          The DBCP has developed and implements several types of quality control procedures:
+          The DBCP has developed and implements several types of quality control procedures. The first one would be an <b>automated checks on incoming GTS Data</b>. Before data is put onto the GTS, Data Processing centres and the operators of buoys ensure that surface observations are validated in real-time, performing a set of tests as described in DBCP Technical Document No. 2.
         </p>
         <p style="text-align: left">
-          <ol class="numbered-list">
-            <li style="text-align: left"><b>Automated checks on incoming GTS Data</b>: Before data is put onto the GTS, Data Processing centres and the operators of buoys ensure that surface observations are validated in real-time, performing a set of tests as described in DBCP Technical Document No. 2.</li>
-            <li style="text-align: left"><b>Regular quality assessments by Quality Control Centers</b>: DBCP members then ensure that poor quality data is removed, as quickly as possible, from the GTS, based on feedback on individual data buoys, from data users and quality control centres. A well-defined feedback mechanism ensures that any interventions arising from this off-line quality control (e.g., modifications to individual sensor transfer functions) are communicated to buoy operators and processing centers so that modifications can be implemented into the real-time data processing chain in a coordinated and auditable fashion.Feed back can be via a web interface, known as the QC Relay Mechanism (see below) or via the DBCP QC mailing list</li>
-            <li style="text-align: left"><b>Buoy Monitoring Statistics (Monthly)</b>: Several other bodies (ECMWF, national weather and oceanographic agencies, GDC, ISDM, etc.) contribute to regular assessment of data quality for all buoys on the GTS for the previous month.</li>
-          </ol>
+          <b>Regular quality assessments by Quality Control Centers</b> then be carried out. This is where DBCP members ensure that poor quality data is removed, as quickly as possible, from the GTS, based on feedback on individual data buoys, from data users and quality control centres. A well-defined feedback mechanism ensures that any interventions arising from this off-line quality control (e.g., modifications to individual sensor transfer functions) are communicated to buoy operators and processing centers so that modifications can be implemented into the real-time data processing chain in a coordinated and auditable fashion.Feed back can be via a web interface, known as the QC Relay Mechanism (see below) or via the DBCP QC mailing list.
         </p>
-     </div>
-     <div class="twoparts-right">
-        <figure>
-          <img src="figures/qc_guide.jpg" alt="QC Guide" />
-        </figure>
-     </div>
-   </div>
+        <p style="text-align: left">
+          <b>Buoy Monitoring Statistics (Monthly)</b> is carried out by several other bodies (ECMWF, national weather and oceanographic agencies, GDC, ISDM, etc.) contributing to regular assessment of data quality for all buoys on the GTS for the previous month.
+        </p>
+      </div>
+
+    </div>
   </div>
 </section>
 
@@ -156,10 +154,10 @@
           Several other bodies (ECMWF, national weather and oceanographic agencies, GDC, ISDM, etc.) contribute to regular assessment of data quality for all buoys on the GTS for the previous month. Assessments include: errors against Numerical Weather Prediction models (RMS), number of Gross errors and errors in location.
         </p>
         <p style="text-align: left">
-          <a href="ftp://esurfmar.meteo.fr/pub/pb/qc-stats/" target="_blank">Archived Monthly Monitoring Statistics (Meteo France FTP)</a>
+          <a href="https://esurfmar.meteo.fr/qctools/statistics/statistics.php">Archived Monthly Monitoring Statistics</a>
         </p>
         <p style="text-align: left">
-          <a href="http://esurfmar.meteo.fr/qctools/rechstat_surfmar.htm" target="_blank">MeteoFrance QC Tools Buoys Monthly Statistics (6 months)</a>
+          <a href="https://esurfmar.meteo.fr/qctools/">MeteoFrance QC Tools</a>
         </p>
      </div>
      <div class="twoparts-right">
@@ -169,15 +167,15 @@
         </p>
         <p style="text-align: left">
           <ul class="custom-bullets">
-            <li style="text-align: left"><a href="" target="_blank">The Australian Bureau Of Meteorology (BoM)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">Environment Canada (AES)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">The European Centre for Medium-Range Weather Forecasts (ECMWF)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">Meteo France</a></li>
-            <li style="text-align: left"><a href="" target="_blank">The Meteorological Service of New Zealand, Ltd. (MSNZ)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">The National Data Buoy Center (NDBC of NOAA, USA)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">The National Center for Environmental Protection (NCEP of NOAA, USA)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">The United Kingdom Meteorological Office (UKMO)</a></li>
-            <li style="text-align: left"><a href="" target="_blank">GHRSST Scientific Steering Team members.</a></li>
+            <li style="text-align: left"><a href="http://www.bom.gov.au/">The Australian Bureau Of Meteorology (BoM)</a></li>
+            <li style="text-align: left"><a href="https://weather.gc.ca/canada_e.html">Environment Canada (AES)</a></li>
+            <li style="text-align: left"><a href="https://www.ecmwf.int/">The European Centre for Medium-Range Weather Forecasts (ECMWF)</a></li>
+            <li style="text-align: left"><a href="https://meteofrance.com/">Meteo France</a></li>
+            <li style="text-align: left"><a href="https://www.metservice.com/">The Meteorological Service of New Zealand, Ltd. (MSNZ)</a></li>
+            <li style="text-align: left"><a href="https://www.ndbc.noaa.gov/">The National Data Buoy Center (NDBC of NOAA, USA)</a></li>
+            <li style="text-align: left"><a href="https://www.weather.gov/ncep/">The National Center for Environmental Prediction (NCEP of NOAA, USA)</a></li>
+            <li style="text-align: left"><a href="https://www.metoffice.gov.uk/">The United Kingdom Meteorological Office (UKMO)</a></li>
+            <li style="text-align: left"><a href="https://www.ghrsst.org/">GHRSST Scientific Steering Team members</a></li>
           </ul>
         </p>
      </div>
@@ -198,7 +196,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
-          <a href="data_uses.html" target="_blank">
+          <a href="data_uses.html">
             <p style="text-align: center; ">Uses of buoy data</p>
           </a>
         </figure>
@@ -206,7 +204,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_data_access.jpg" alt="related articles"/>
-          <a href="data_access.html" target="_blank">
+          <a href="data_access.html">
             <p style="text-align: center; ">Accessing buoy data</p>
           </a>
         </figure>
@@ -214,7 +212,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_oceanops.jpg" alt="related articles"/>
-          <a href="https://www.ocean-ops.org/board" target="_blank">
+          <a href="https://www.ocean-ops.org/board">
             <p style="text-align: center; ">OceanOPS Dashboard</p>
           </a>
         </figure>
@@ -222,7 +220,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">Buoy networks and platform</p>
           </a>
         </figure>
