--- a/action_groups.html
+++ b/action_groups.html
@@ -42,17 +42,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -60,7 +59,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -99,13 +98,13 @@
           <h1>Strengthening ocean monitoring for a resilient and sustainable future</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -173,7 +172,7 @@
             Objectives of the Global Drifter Center are (1) to maintain a global 5° x 5° gridded array of ~1,300 satellite-tracked surface drifting buoys to meet the need for an accurate and globally dense set of in-situ observations of mixed layer currents, sea surface temperature, atmospheric pressure, winds, waves, and salinity; and (2) to provide a data processing system for the use of these data.
           </p>
           <p style="text-align: right">
-            <a href="https://www.aoml.noaa.gov/phod/gdp/index.php" target="_blank">
+            <a href="https://www.aoml.noaa.gov/phod/gdp/index.php">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -198,7 +197,7 @@
             The TIP serve the needs of GOOS and GCOS in its role as an Action Group of the Data Buoy Cooperation Panel (DBCP) and as an integral component of the Data Buoy Observations Team within the Observations Program Area of the Joint Technical Commission for Oceanography and Marine Meteorology (JCOMM). The TIP will also co-ordinate tropical moored buoy program implementation on behalf of CLIVAR and, in particular, provide oversight and co-ordination for experimental pilot arrays.
           </p>
           <p style="text-align: right">
-            <a href="https://www.pmel.noaa.gov/gtmba/" target="_blank">
+            <a href="https://www.pmel.noaa.gov/gtmba/">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -234,7 +233,7 @@
       <li style="text-align: left">
         <p style="text-align: left">
               <b>European EUCOS Surface Marine Programme (ESURFMAR)</b>, adopted by the DBCP in 1987 as EGOS, coordinate, optimize, and progressively integrate European activities for surface observations over the sea in support of Numerical Weather Prediction and climate. It maintain an operational network of drifting buoys measuring air pressure and sea surface temperature in the North Atlantic, Tropical Atlantic, and Arctic, with data made available in real time onto the Global Telecommunication System of WMO. 
-              <a href="https://www.eumetnet.eu/observations/surface-marine-observations/" target="_blank">
+              <a href="https://www.eumetnet.eu/observations/surface-marine-observations/">
                 Learn more...
               </a>
         </p>
@@ -242,7 +241,7 @@
       <li style="text-align: left">
         <p style="text-align: left">
               <b>International Arctic Buoy Programme (IABP)</b>, adopted by the DBCP in 1991, work together to maintain a network of drifting buoys in the Arctic Ocean to provide meteorological and oceanographic data for real-time operational requirements and research purposes including support to the World Climate Research Programme (WCRP) and the World Weather Watch (WWW) Programme.
-              <a href="https://iabp.apl.washington.edu/" target="_blank">
+              <a href="https://iabp.apl.washington.edu/">
                 Learn more...
               </a>
         </p>
@@ -250,7 +249,7 @@
       <li style="text-align: left">
         <p style="text-align: left">
               Established in 1994, the <b>International South Atlantic Buoy Programme (ISABP)</b> operates as a regional action group focusing on the South Atlantic Ocean. The ISABP’s buoys collect oceanographic and meteorological data to support both regional and global initiatives, including GOOS and GCOS.
-              <a href="http://oceatlan.org/isabp/" target="_blank">
+              <a href="http://oceatlan.org/isabp/">
                 Learn more...
               </a>
         </p>
@@ -258,7 +257,7 @@
       <li style="text-align: left">
         <p style="text-align: left">
               Adopted in 2002, the <b>North Pacific Data Buoy Advisory Panel (NPDBAP)</b> focuses on maintaining a buoy network in the North Pacific Ocean north of 30°N. This program supports regional observation efforts, contributing to global data-sharing initiatives and providing critical information for meteorological and oceanographic applications.
-              <a href="https://www.ocean-ops.org/dbcp/npdbap/index.html" target="_blank">
+              <a href="https://www.ocean-ops.org/dbcp/npdbap/index.html">
                 Learn more...
               </a>
         </p>
@@ -267,7 +266,7 @@
         <p style="text-align: left">
             Launched in 1996, the <b>International Buoy Program for the Indian Ocean (IBPIO)</b> is an essential component of the Indian Ocean Observation Network. Under the program, the National Institute of Ocean Technology (NIOT) operates and maintains a network of moored buoys, including advanced Ocean Moored buoy Network for Northern Indian (OMNI) buoys.
             IBPIO supports diverse research objectives, including the study of monsoon systems and their influence on regional climates. Its buoys also contribute to operational weather forecasting, showcasing the value of regional Action Groups in addressing local challenges while contributing to global efforts.
-              <a href="https://incois.gov.in/portal/datainfo/buoys.jsp" target="_blank">
+              <a href="https://incois.gov.in/portal/datainfo/buoys.jsp">
                 Learn more...
               </a>
         </p>
@@ -276,7 +275,7 @@
         <p style="text-align: left">
             The <b>International Programme for Antarctic Buoys (IPAB)</b> adopted in 1994, works to maintain a buoy network in the Southern Ocean, particularly over sea ice. This program supports research on Antarctic climate, weather forecasting, and satellite measurement validation.
             By providing crucial data on ice dynamics and ocean-atmosphere interactions, IPAB enhances the understanding of the Southern Ocean’s role in global climate systems.
-              <a href="https://www.ipab.aq/" target="_blank">
+              <a href="https://www.ipab.aq/">
                 Learn more...
               </a>
         </p>
@@ -286,7 +285,7 @@
         <h3><i>Other Groups</i></h3>
         <p style="text-align: left">
             The <b>Southern Ocean Buoy Program (SOBP)</b> focuses on deploying barometer buoys in the Southern Ocean, maintaining an array of approximately 300 drifting buoys south of 50°S. This initiative enhances the observation network in a region critical for understanding global climate processes.
-              <a href="#" target="_blank">
+              <a href="#">
                 Learn more...
               </a>
         </p>
@@ -307,7 +306,7 @@
      <div class="fourparts-one"; style="border-bottom: 0px;">
         <figure>
           <img src="figures/thumbnail_about.jpg" alt="related articles"/>
-          <a href="about_us.html" target="_blank">
+          <a href="about_us.html">
             <p style="text-align: center; ">About us</p>
           </a>
         </figure>
@@ -315,7 +314,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
-          <a href="network_status_and_map.html" target="_blank">
+          <a href="network_status_and_map.html">
             <p style="text-align: center;">Network status and map</p>
           </a>
         </figure>
@@ -323,7 +322,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center;">Buoy platforms</p>
           </a>
         </figure>
@@ -331,7 +330,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_deployment.jpg" alt="related articles"/>
-          <a href="deployment.html" target="_blank">
+          <a href="deployment.html">
             <p style="text-align: center;">Buoy deployment</p>
           </a>
         </figure>
