--- a/anti_vandalism.html
+++ b/anti_vandalism.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>Buoys are keeping us save, let's do our part in keeping them save</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -131,19 +130,19 @@
           Ocean buoy awareness by the WMO (in English)
         </b></p>
         <p style="text-align: left">
-          Available in other languages: <a href="https://www.youtube.com/watch?v=nGEAdjYWYp0&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=1&pp=iAQB" target="_blank">Solomon Island Pijin</a>, 
-              <a href="https://www.youtube.com/watch?v=KwXQG1zJE60&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=2&pp=iAQB" target="_blank">Tok Pisin</a>,
-              <a href="https://www.youtube.com/watch?v=CtPXKYvZ-Y0&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=3&pp=iAQB" target="_blank">Tuvaluan</a>,
-              <a href="https://www.youtube.com/watch?v=2Lil5y7JQno&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=4&pp=iAQB" target="_blank">Samoan</a>,
-              <a href="https://www.youtube.com/watch?v=LWgmaSx02Os&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=5&pp=iAQB0gcJCX4JAYcqIYzv" target="_blank">Nauruan</a>,
-              <a href="https://www.youtube.com/watch?v=F_kJRwkJ5_8&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=6&pp=iAQB" target="_blank">Micronesia Chuukese</a>,
-              <a href="https://www.youtube.com/watch?v=HNIX_9T6H3M&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=7&pp=iAQB" target="_blank">Maori</a>,
-              <a href="https://www.youtube.com/watch?v=tseoNNKrBH8&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=8&pp=iAQB" target="_blank">Bislama</a>,
-              <a href="https://www.youtube.com/watch?v=-ZL-3GcmRVM&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=9&pp=iAQB" target="_blank">Caribean (Spanish)</a>,
-              <a href="https://www.youtube.com/watch?v=V3azZaoyQds&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=11&pp=iAQB" target="_blank">Caribean (Creole)</a>.
+          Available in other languages: <a href="https://www.youtube.com/watch?v=nGEAdjYWYp0&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=1&pp=iAQB">Solomon Island Pijin</a>, 
+              <a href="https://www.youtube.com/watch?v=KwXQG1zJE60&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=2&pp=iAQB">Tok Pisin</a>,
+              <a href="https://www.youtube.com/watch?v=CtPXKYvZ-Y0&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=3&pp=iAQB">Tuvaluan</a>,
+              <a href="https://www.youtube.com/watch?v=2Lil5y7JQno&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=4&pp=iAQB">Samoan</a>,
+              <a href="https://www.youtube.com/watch?v=LWgmaSx02Os&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=5&pp=iAQB0gcJCX4JAYcqIYzv">Nauruan</a>,
+              <a href="https://www.youtube.com/watch?v=F_kJRwkJ5_8&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=6&pp=iAQB">Micronesia Chuukese</a>,
+              <a href="https://www.youtube.com/watch?v=HNIX_9T6H3M&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=7&pp=iAQB">Maori</a>,
+              <a href="https://www.youtube.com/watch?v=tseoNNKrBH8&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=8&pp=iAQB">Bislama</a>,
+              <a href="https://www.youtube.com/watch?v=-ZL-3GcmRVM&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=9&pp=iAQB">Caribean (Spanish)</a>,
+              <a href="https://www.youtube.com/watch?v=V3azZaoyQds&list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq&index=11&pp=iAQB">Caribean (Creole)</a>.
         </p>
         <p style="text-align: right">
-          <a href="https://www.youtube.com/playlist?list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq" target="_blank">
+          <a href="https://www.youtube.com/playlist?list=PLNaX-uTWSWrHr554n5hLdemL-idLcefMq">
             <button class="button-orange">
               <i>Complete series</i>
             </button>
@@ -186,10 +185,10 @@
           </ul>
     </p>
     <p style="text-align: left">
-      WMO Executive Council (<a href="https://library.wmo.int/viewer/56243/?offset=9#page=193" target="_blank">EC-70, Decision-28</a>) and IOC Executive Council (<a href="https://oceanexpert.org/downloadFile/32530" target="_blank">Decision EC-XLIX/3.4, Part III</a>) adopted the Outreach Strategy to Reduce Damage to Ocean Data Buoys From Vandalism.
+      WMO Executive Council (<a href="https://library.wmo.int/viewer/56243/?offset=9#page=193">EC-70, Decision-28</a>) and IOC Executive Council (<a href="https://oceanexpert.org/downloadFile/32530">Decision EC-XLIX/3.4, Part III</a>) adopted the Outreach Strategy to Reduce Damage to Ocean Data Buoys From Vandalism.
     </p>
     <p style="text-align: left">
-      DBCP's <a href="WG Vandalism Strategy" target="_blank">Working Group on Vandalism Strategy</a> presented at the 33th session of the DBCP.
+      DBCP's <a href="WG Vandalism Strategy">Working Group on Vandalism Strategy</a> presented at the 33th session of the DBCP.
     </p>
   </div>
 </section>
@@ -209,7 +208,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_e_stewardship.jpg" alt="related articles"/>
-          <a href="e_stewardship.html" target="_blank">
+          <a href="e_stewardship.html">
             <p style="text-align: center; ">Environmental stewardship</p>
           </a>
         </figure>
@@ -217,7 +216,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">DBCP subnetworks and platforms</p>
           </a>
         </figure>
@@ -225,7 +224,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_standard.jpg" alt="related articles"/>
-          <a href="standard.html" target="_blank">
+          <a href="standard.html">
             <p style="text-align: center; ">Data buoy standard and best practices</p>
           </a>
         </figure>
@@ -233,7 +232,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_publications.jpg" alt="related articles"/>
-          <a href="publications.html" target="_blank">
+          <a href="publications.html">
             <p style="text-align: center; ">DBCP related publications</p>
           </a>
         </figure>
