--- a/e_stewardship.html
+++ b/e_stewardship.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>Observing the oceans responsibly – advancing science through sustainable stewardship</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -133,44 +132,44 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <img src="figures/environment01.jpg" alt="dbcp environmental stewardship" />
+          <img src="figures/environment01.png" alt="dbcp environmental stewardship" />
         </figure>
         <p style="text-align: left">
           The following list are the UN and global instruments on environmental stewardship related to the ocean observation:
           <ul class="custom-bullets">
             <li style="text-align: left">
-              The <a href="https://www.un.org/Depts/los/convention_agreements/texts/unclos/unclos_e.pdf" target="_blank">United Nations Convention on the Law of the Sea</a> regulating the Protection and Preservation of the Marine Environment (Part XII) and Marine scientific research (Part XIII).
+              The <a href="https://www.un.org/Depts/los/convention_agreements/texts/unclos/unclos_e.pdf">United Nations Convention on the Law of the Sea</a> regulating the Protection and Preservation of the Marine Environment (Part XII) and Marine scientific research (Part XIII).
             </li>
             <li style="text-align: left">
-              The UN Sustainable Development Goal (SDG), <a href="https://sdgs.un.org/goals/goal14" target="_blank">Goals No 14 Conserve and sustainably use the oceans</a>, seas and marine resources for sustainable development explaining the urgent actions needed to safeguard the planet's largest ecosystem.
+              The UN Sustainable Development Goal (SDG), <a href="https://sdgs.un.org/goals/goal14">Goals No 14 Conserve and sustainably use the oceans</a>, seas and marine resources for sustainable development explaining the urgent actions needed to safeguard the planet's largest ecosystem.
             </li>
             <li style="text-align: left">
-              <a href="https://www.unep.org/resources/report/marine-litter-legislation-toolkit-policymakers" target="_blank">UNEP report on Marine Litter</a> provides an overview of legislation that countries have implemented to tackle marine litter, focusing in particular on upstream solutions.
+              <a href="https://www.unep.org/resources/report/marine-litter-legislation-toolkit-policymakers">UNEP report on Marine Litter</a> provides an overview of legislation that countries have implemented to tackle marine litter, focusing in particular on upstream solutions.
             </li>
             <li style="text-align: left">
-              UNEP's <a href="https://minamataconvention.org/en" target="_blank">Minamata Mercury Convention</a> highlights a ban on new mercury mines, the phase-out of existing ones, the phase-out and phase-down of mercury use in a number of products and processes, control measures on emissions to air and on releases to land and water.
+              UNEP's <a href="https://minamataconvention.org/en">Minamata Mercury Convention</a> highlights a ban on new mercury mines, the phase-out of existing ones, the phase-out and phase-down of mercury use in a number of products and processes, control measures on emissions to air and on releases to land and water.
             </li>
             <li style="text-align: left">
-              <a href="https://www.imo.org/en/About/Conventions/Pages/International-Convention-for-the-Prevention-of-Pollution-from-Ships-(MARPOL).aspx#:~:text=The%20International%20Convention%20for%20the,2%20November%201973%20at%20IMO." target="_blank">International Convention for the Prevention of Pollution from Ships (MARPOL)</a>
+              <a href="https://www.imo.org/en/About/Conventions/Pages/International-Convention-for-the-Prevention-of-Pollution-from-Ships-(MARPOL).aspx#:~:text=The%20International%20Convention%20for%20the,2%20November%201973%20at%20IMO.">International Convention for the Prevention of Pollution from Ships (MARPOL)</a>
             </li>
             <li style="text-align: left">
-              <a href="https://www.imo.org/en/OurWork/Environment/Pages/London-Convention-Protocol.aspx#:~:text=The%20%22Convention%20on%20the%20Prevention,been%20in%20force%20since%201975." target="_blank">Convention on the Prevention of Marine Pollution by Dumping of Wastes and Other Matter</a>
+              <a href="https://www.imo.org/en/OurWork/Environment/Pages/London-Convention-Protocol.aspx#:~:text=The%20%22Convention%20on%20the%20Prevention,been%20in%20force%20since%201975.">Convention on the Prevention of Marine Pollution by Dumping of Wastes and Other Matter</a>
             </li>
           </ul>
         </p>
      </div>
      <div class="twoparts-right">
         <figure>
-          <img src="figures/environment02.jpg" alt="dbcp environmental stewardship" />
+          <img src="figures/environment02.png" alt="dbcp environmental stewardship" />
         </figure>
         <p style="text-align: left">
           The following list are the National and regional Environmental Impact Assessments on environmental stewardship:
           <ul class="custom-bullets">
             <li style="text-align: left">
-             NOAA NDBC <a href="https://www.ndbc.noaa.gov/pea/ndbc_final_pea_20180104.pdf" target="_blank">Programmatic Environmental Assessment for the National Oceanic and Atmospheric Administration</a>
+             NOAA NDBC <a href="https://www.ndbc.noaa.gov/pea/ndbc_final_pea_20180104.pdf">Programmatic Environmental Assessment for the National Oceanic and Atmospheric Administration</a>
             </li>
             <li style="text-align: left">
-             <a href="http://krill.ocean.washington.edu/riser_web/final.Argo_Environmental_Impact.2020.05.10.pdf" target="_blank">Argo Program Environmental Issues and the Argo Array</a>
+             <a href="http://krill.ocean.washington.edu/riser_web/final.Argo_Environmental_Impact.2020.05.10.pdf">Argo Program Environmental Issues and the Argo Array</a>
             </li>
           </ul>
         </p>
@@ -178,16 +177,16 @@
           Good practices on environmental stewardship in the network:
           <ul class="custom-bullets">
             <li style="text-align: left">
-             <a href="https://argo.ucsd.edu/about/argos-environmental-impact/" target="_blank">Argo’s environmental impact</a>
+             <a href="https://argo.ucsd.edu/about/argos-environmental-impact/">Argo’s environmental impact</a>
             </li>
             <li style="text-align: left">
-             <a href="https://www.euro-argo.eu/content/download/152778/file/Environmental_Impact_Euro-Argo_POSTER.pdf" target="_blank">Euro Argo's poster on Environmental Impact of Argo Floats</a>
+             <a href="https://www.euro-argo.eu/content/download/152778/file/Environmental_Impact_Euro-Argo_POSTER.pdf">Euro Argo's poster on Environmental Impact of Argo Floats</a>
             </li>
             <li style="text-align: left">
-             <a href="https://www.euro-argo.eu/content/download/152775/file/Environmental_impact_Argo_floats_Euro-Argo_ON-SCREEN-DISPLAY-2.pdf" target="_blank">Euro Argo's pamflet on What are the Environmental Cost and Benefit of Argo Floats</a>
+             <a href="https://www.euro-argo.eu/content/download/152775/file/Environmental_impact_Argo_floats_Euro-Argo_ON-SCREEN-DISPLAY-2.pdf">Euro Argo's pamflet on What are the Environmental Cost and Benefit of Argo Floats</a>
             </li>
             <li style="text-align: left">
-             NOAA's <a href="https://goosocean.org/document/28929" target="_blank">Environmental impact assessment on Expendable Bathythermographs (XBT)</a>
+             NOAA's <a href="https://goosocean.org/document/28929">Environmental impact assessment on Expendable Bathythermographs (XBT)</a>
             </li>
           </ul>
         </p>
@@ -215,7 +214,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_anti_vandalism.jpg" alt="related articles"/>
-          <a href="anti_vandalism.html" target="_blank">
+          <a href="anti_vandalism.html">
             <p style="text-align: center; ">Addressing vandalism</p>
           </a>
         </figure>
@@ -223,7 +222,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
-          <a href="platform.html" target="_blank">
+          <a href="platform.html">
             <p style="text-align: center; ">DBCP observation platform</p>
           </a>
         </figure>
@@ -231,7 +230,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_publications.jpg" alt="related articles"/>
-          <a href="publications.html" target="_blank">
+          <a href="publications.html">
             <p style="text-align: center; ">DBCP related publications</p>
           </a>
         </figure>
@@ -239,7 +238,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
-          <a href="qc.html" target="_blank">
+          <a href="qc.html">
             <p style="text-align: center; ">Quality control of buoy data</p>
           </a>
         </figure>
