--- a/index.html
+++ b/index.html
@@ -43,17 +43,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOps dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -61,7 +60,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -100,13 +99,13 @@
           <h1>Supporting climate resilience and sustainable ocean governance</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int" >
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en" >
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org" >
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -123,7 +122,7 @@
   <!-- Statistics Section -->
   <section class="statistics">
     <div class="container">
-    <h2>Helping Meteorologists and Oceanographers worldwide</h2>
+    <h2 style="margin-bottom: 20px;">Listening to the ocean — tools that keep watch</h2>
     <div class="stats-grid">
       <div class="stat-item">
         <h3>1,500+</h3>
@@ -138,36 +137,12 @@
         <p>of observing and monitoring service</p>
       </div>
     </div>
-      <p style="margin-top: 20px;">The DBCP is an international program coordinating the use of autonomous data buoys to observe atmospheric and oceanographic conditions, over ocean areas where few other measurements are taken.</p>
-      <p style="margin-top: 20px;">Data buoys measure air pressure, sea surface temperature, ocean current velocity, air temperature, humidity, wave characteristics and wind velocity across all oceans. The DBCP aims to increase the quantity, quality, global coverage and timeliness of atmospheric and oceanographic data. These observations are relayed by satellite and used immediately to improve forecasts and therefore increase marine safety.</p>
+      <p style="margin-top: 20px;">Every day, thousands of instruments float across our oceans, collecting critical data that powers life-saving forecasts and global climate models. At the heart of this effort is the <b>Data Buoy Cooperation Panel (DBCP)</b>, a global program coordinated by <b>WMO</b> and <b>IOC-UNESCO</b>, dedicated to managing networks of <b>autonomous ocean buoys</b>.</p>
+      <p style="margin-top: 20px;">These tools include <b>drifting buoys</b>, <b>moored buoys</b>, and <b>tsunameters</b>. Each with a unique role. Drifting buoys move with ocean currents, capturing data across vast regions. Moored buoys remain anchored, providing stable, long-term observations. Tsunameters, placed strategically in specific places on the sea, are designed to detect tsunami-generating pressure anomalies, supporting tsunami warning systems.</p>
+      <p style="margin-top: 20px;">With over <b>1,250 drifting buoys</b> and <b>400 moored buoys</b> in the DBCP network, these platforms fill critical gaps in regions where no ships or satellites can reach. Every data point they collect helps bring the ocean’s voice into weather centers, research labs, and climate action rooms worldwide.</p>
+      <!--p style="margin-top: 20px;"><b>Together, we can ensure the ocean’s voice is heard, shaping a more resilient and sustainable future for all.</b></p-->
       </div>
   </section>
-
-  <!-- News Section -->
-  <section class="news" style="border-top: 1px dashed lightgrey;">
-    <h2>Latest News</h2>
-    <div class="news-grid">
-      <div class="news-item">
-        <a href="#" target="_blank"> <!-- please change into the page of the article -->
-        <h3>40th session of DBCP</h3> 
-        </a>
-        <p>The special session was commemorated the 40th anniversary of DBCP.</p>
-      </div>
-      <div class="news-item">
-        <a href="#" target="_blank"> <!-- please change into the page of the article -->
-        <h3>DBCP Newsletter Relaunch</h3>
-        </a>
-        <p>After a pause in recent times, DBCP Newsletter will be ready to be sent to your inbox in March 2025.</p>
-      </div>
-      <div class="news-item">
-        <a href="# target="_blank"> <!-- please change into the page of the article -->
-        <h3>DBCP Workshop 2025</h3>
-        </a>
-        <p>The upcoming DBCP Capacity Development workshop in Hiderabad, India.</p>
-      </div>
-    </div>
-  </section>
-
 
 <!-- Article Section with two coloumn -->
 
@@ -175,26 +150,85 @@
   <div class="container">
     <div class="content">
      <div class="twoparts-left">
-        <figure>
-          <img src="figures/INC_9178.jpg" alt="DBCP-40" />
-        </figure>
+        <h2>What we learn from the waves — ocean parameters that matter</h2>
+        <p style="text-align: left">What secrets does the ocean hold? The tools supported by the DBCP help us find answers, measuring <b>Essential Ocean Variables (EOVs)</b> that are fundamental to understanding Earth's systems. These include <b>sea surface temperature</b>, <b>salinity</b>, <b>air and sea pressure</b>, <b>ocean currents</b>, <b>humidity</b>, and <b>wave height</b>.</p>
+        <p style="text-align: left">This data may seem invisible, but its impact is immense. A slight shift in sea surface temperature, for example, can signal the arrival of El Niño, disrupt global rainfall patterns, or trigger marine heatwaves that damage coral reefs. Real-time pressure readings are key for predicting tropical cyclones. Current velocity helps improve routing for ships and model storm surge pathways.</p>
+        <p style="text-align: left">By standardizing and expanding these observations through robust buoy networks, the DBCP helps scientists and meteorologists <b>see the bigger picture</b> — turning the vast, unpredictable ocean into a well-monitored ally in climate resilience and operational safety.</p>
      </div>
      <div class="twoparts-right">
-       <h3>Key documents</h3>
-        <p style="text-align: left">
-          <ul class="custom-bullets">
-            <li>DBCP Operating Principles (last updated 2021)</li>
-            <li><a href="http://www.iode.org/index.php?option=com_oe&task=viewDoclistRecord&doclistID=9" target="_blank">IOC Manuals and Guides</a></li>
-            <li><a href="https://community.wmo.int/en/mmop-publications-and-documents-0" target="_blank"> DBCP Technical Reports Series</a></li>
-          </ul>
-        </p>
+        <figure>
+          <img src="figures/thumbnail_deployment.jpg" alt="deployment of a moored buoy" />
+        </figure>
      </div>
    </div>
-
 
   </div>
 </section>
 
+
+
+  <!-- News Section -->
+  <section class="news" style="border-top: 1px dashed lightgrey;">
+    <h3><i>Every observation in the ocean contributes to better predictions, safer seas, and more resilient communities. <br> Together, we can unlock the potential of ocean observations to protect lives, support economies, and build a climate-resilient future.</i></h3><br>
+    <div class="news-grid">
+      <div class="news-item">
+        <a href="network_status_and_map.html"> 
+        <h3>Our observation network status</h3> 
+        </a>
+        <p>Buoys dispersed over wide ocean to capture the latest of the atmosphere and near surface ocean condition.</p>
+      </div>
+      <div class="news-item">
+        <a href="standard.html">
+        <h3>High quality and standardized observation</h3>
+        </a>
+        <p>The observation is carried out through international standard and quality control procedure.</p>
+      </div>
+      <div class="news-item">
+        <a href="barometer_upgrade.html">
+        <h3>Barometer upgrade programme</h3>
+        </a>
+        <p>Special collaboration programme to equipe the current available buoys with additional barometer sensors.</p>
+      </div>
+    </div>
+  </section>
+
+
+<!-- Article Section with two coloumn -->
+
+<section class="article-section" >
+
+  <div class="container">
+    <div class="content">
+     <div class="twoparts-left">
+     <!--div class="twoparts-left"
+  style="background-image: url('figures/session_01.jpg'); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;"-->
+        <figure>
+          <img src="figures/session_01.jpg" alt="DBCP-40" />
+        </figure>
+     </div>
+     <div class="twoparts-right" style="background-color:#17449695; padding: 20px; color: white;" >
+     <h2>Beneath the surface of the State of Climate Report</h2>
+        <p style="text-align: left">Behind every <b>WMO State of the Climate Report</b> is a story told by the ocean. Much of the report’s understanding of <b>ocean heat content</b>, <b>sea level rise</b>, and <b>marine biodiversity change</b> relies on high-quality data provided by global ocean observation networks — including the DBCP’s buoy systems.</p>
+        <p style="text-align: left">As the ocean absorbs over 90% of Earth’s excess heat, accurate, long-term temperature and pressure data from buoys help track <b>warming trends</b> and <b>thermal expansion</b>, a major driver of sea level rise. These measurements also support models that assess how changing ocean conditions impact <b>marine ecosystems</b> and <b>fisheries</b> — lifelines for millions.</p>
+        <p style="text-align: left">Thanks to the collaborative framework of <b>WMO</b> and <b>IOC-UNESCO</b>, the DBCP feeds critical data into climate research and policy efforts, ensuring decisions about our future oceans are informed by real, reliable evidence.</p>
+     </div>
+   </div>
+
+  </div>
+</section>
+
+<section class="article-section">
+  <div class="container">
+        <h2 style="text-align: center">Supporting the Most Vulnerable — Ocean Data for Resilience</h2>
+        <p style="text-align: center">Small Island Developing States (SIDS) and Least Developed Countries (LDCs) are on the frontlines of climate change — yet often lack the observational infrastructure needed for timely, reliable forecasts. Through global collaboration and regional partnerships, the <b>Data Buoy Cooperation Panel</b> works to fill that gap.</p>
+        <p style="text-align: center">In the South Pacific, for instance, buoy deployments coordinated through DBCP Action Groups have improved wave forecasting and weather monitoring — crucial for fisheries, transport, and disaster response. In East Africa, real-time ocean data supports surge warnings and enhances storm prediction along vulnerable coasts.</p>
+        <p style="text-align: center">By promoting <b>capacity building</b>, encouraging <b>technology transfer</b>, and supporting <b>regional deployment programs</b>, the DBCP ensures that ocean data reaches those who need it most. Initiatives led by the Task Team on Capacity Building empower local experts, while partnerships with agencies like OceanOPS and IOC regional alliances make long-term resilience possible.</p>
+        <h3 style="text-align: center; background-color: blue; color: white; padding: 10px""><i>We are all connected by the ocean. Let’s work together to ensure no coast is left behind.</i></h3>
+  </div>
+</section>
 
 
 
@@ -206,7 +240,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="footer-bottom">
-      <img src="figures/2.png" alt="DBCP-40" style="height:200px"/>
+      <a href="https://goosocean.org" ><img src="figures/2.png" alt="GOOS banner" style="height:200px"/></a>
     </div>
     <div class="footer-bottom">
       <p>Copyright © 2025 Data Buoy Cooperation Panel. All Rights Reserved. Privacy Statement. Terms of Use.</p>
