--- a/platform.html
+++ b/platform.html
@@ -36,17 +36,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -54,7 +53,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -93,13 +92,13 @@
           <h1>Ocean buoys: the floating observatories powering ocean and climate science</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -156,7 +155,7 @@
           The Lagrangian Barometer Drifter, designed by the GDP, is now commercially available at low cost, and meets both oceanographic requirements (research: measurements of sea surface currents and sea temperature) and meteorological requirements (operational: sea surface temperature and air pressure). The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their variants for the high seas.
         </p>
         <p style="text-align: right">
-          <a href="barometer_upgrade.html" target="_blank">
+          <a href="barometer_upgrade.html">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -182,7 +181,7 @@
           Ice buoys have been used extensively in Arctic and Antarctic regions to track ice movement and are available commercially for deployment by ships or aircraft. Such buoys are equipped with low temperature electronics and lithium batteries that can operate at temperatures down to -50°C. In addition to the regularly-computed Argos locations the ice buoys can be equipped with satellite navigation receivers (e.g. GPS) which can compute even more accurate positions.
         </p>
         <p style="text-align: right">
-          <a href="#" target="_blank">
+          <a href="#">
             <button class="button-ijo">
               <i>Learn more</i>
             </button>
@@ -198,7 +197,7 @@
     <div class="content content-float">
       <h2 style="text-align: left">Moored buoys</h2>
       <figure class="floating-image">
-        <img src="figures/moored_buoy.png" alt="Moored buoy">
+        <img src="figures/Moored_buoy.png" alt="Moored buoy">
       </figure>
       <div class="text-content">
         <p style="text-align: left">
@@ -217,7 +216,7 @@
           If a moored buoy goes adrift it represents a potential loss of costly equipment and a possible hazard to navigation. For this reason a backup location system is used to ensure that an alert is sent if the buoy leaves a certain area.
         </p>
         <p style="text-align: right">
-          <a href="#" target="_blank">
+          <a href="#">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -243,7 +242,7 @@
           Most of the buoys in these arrays are the ATLAS mooring, developed at NOAA's Pacific Marine Environmental Laboratory (PMEL) Seattle, WA, in the 1980's, is a taut wire surface mooring with a tube-like float. It is deployed in depths of up to 6000 meters. Measurements from the mooring include surface variables, as well as subsurface temperatures down to a depth of 500 meters. This array and its planned expansion is the result of international collaboration between scientists from France, Japan, Korea, Indonesia, Western Africa, India and the USA.
         </p>
         <p style="text-align: right">
-          <a href="#" target="_blank">
+          <a href="#">
             <button class="button-ijo">
               <i>Learn more</i>
             </button>
@@ -266,7 +265,7 @@
           Many different sorts of Wave Buoys exist to capture and model information about ocean dynamics on the surface. These buoys measure the frequency and size of wave energy (known as the spectra) from which significant wave height, dominant wave period, and average wave period are derived. Even the direction of wave propagation is measured on many moored buoys. This information can be used to greatly improve the prediction and warnings for dangerous storms.
         </p>
         <p style="text-align: right">
-          <a href="https://www.offshore-energy.biz/triaxys-wave-buoys-set-course-for-down-under/" target="_blank">
+          <a href="https://www.offshore-energy.biz/triaxys-wave-buoys-set-course-for-down-under/">
             <button class="button-orange">
               <i>Learn more</i>
             </button>
@@ -298,7 +297,7 @@
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
-          <a href="network_status_and_map.html" target="_blank">
+          <a href="network_status_and_map.html">
             <p style="text-align: center; ">Network status and map</p>
           </a>
         </figure>
@@ -306,7 +305,7 @@
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_data_access.jpg" alt="related articles"/>
-          <a href="data_access.html" target="_blank">
+          <a href="data_access.html">
             <p style="text-align: center; ">Data access</p>
           </a>
         </figure>
@@ -314,7 +313,7 @@
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
-          <a href="qc.html" target="_blank">
+          <a href="qc.html">
             <p style="text-align: center; ">Quality Control of Data</p>
           </a>
         </figure>
@@ -322,7 +321,7 @@
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_share_data.jpg" alt="related articles"/>
-          <a href="share_data.html" target="_blank">
+          <a href="share_data.html">
             <p style="text-align: center; ">Sharing your data</p>
           </a>
         </figure>
