--- a/share_data.html
+++ b/share_data.html
@@ -43,17 +43,16 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="data_access">Data and Network</a>
+          <a href="network_status_and_map.html">Data and Network</a>
           <ul class="submenu">
             <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
-          <a href="#">Resources</a>
+          <a href="standard.html">Resources</a>
           <ul class="submenu">
             <li><a href="standard.html">Standard and best practices</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -61,7 +60,7 @@
           </ul>
         </li>
         <li class="menu-item">
-          <a href="learning.html">Learning</a>
+          <a href="platform.html">Learning</a>
           <ul class="submenu">
             <li><a href="platform.html">Observation platforms</a></li>
             <li><a href="barometer_upgrade.html">Barometer upgrade</a></li>
@@ -100,13 +99,13 @@
           <h1>Delivering ocean insights, preserving data for the future</h1>
         </div>
         <div class="hero-logos">
-          <a href="https://www.wmo.int" target="_blank">
+          <a href="https://www.wmo.int">
             <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
           </a>
-          <a href="https://www.ioc.unesco.org/en" target="_blank">
+          <a href="https://www.ioc.unesco.org/en">
             <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
           </a>
-          <a href="https://goosocean.org" target="_blank">
+          <a href="https://goosocean.org">
             <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
           </a>
         </div>
@@ -136,8 +135,8 @@
         <h3>Further readings</h3>
         <p style="text-align: left">
           <ul class="custom-bullets">
-            <li style="text-align: left"><a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank">WMO Information System 2.0 Overview</a></li>
-            <li style="text-align: left"><a href="https://www.ocean-ops.org/dbcp/data/sharing.html" target="_blank">Guide to Data Sharing Practices</a></li>
+            <li style="text-align: left"><a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview">WMO Information System 2.0 Overview</a></li>
+            <li style="text-align: left"><a href="share_data.html">Guide to Data Sharing Practices</a></li>
           </ul>
         </p>
     </div>
@@ -146,19 +145,14 @@
   </div>
 </section>
 
-<!-- Article Section with two colomn: right text, left image with caption -->
+
 
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <img src="figures/data_sharing01.jpg" alt="data_sharing01" />
-        </figure>
-       </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
+    <div class="content content-float">
+      <figure class="floating-image">
+        <img src="figures/data_sharing01.jpg" alt="Diagram of changing from GTS to WIS2.0">
+      </figure>
         <h3 style="text-align: left">The Transition from GTS to WIS 2.0</h3>
         <p style="text-align: left">
           For decades, the Global Telecommunication System (GTS) has served as the cornerstone of meteorological data exchange, enabling the World Meteorological 
@@ -177,19 +171,11 @@ HTTP(S) downloads, supported by Global Services such as Global Brokers, Caches, 
 with a pilot phase in 2023, a pre-operational phase in 2024, and full operational status targeted for 2025, after which WMO Members are 
 required to migrate. The WMO’s “WIS2 in a box” software further democratizes participation, particularly for Least Developed Countries (LDCs) 
 and Small Island Developing States (SIDS), ensuring no member is left behind. For detailed insights into the GTS and the structured timeline for 
-this transformative shift, visit the <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank"> WMO’s WIS2.0 page 
+this transformative shift, visit the <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview"> WMO’s WIS2.0 page 
 overview</a>.
         </p>
         <p style="text-align: left">
         </p>
-        <p style="text-align: right">
-          <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank">
-            <button class="button-orange">
-              <i>Explore</i>
-            </button>
-          </a>
-        </p>
-      </div>
     </div>
   </div>
 </section>
@@ -249,19 +235,19 @@ availability of meteorological and oceanographic information.
           </ul>
           </p>
           <p style="text-align: left; ">
-            Find the templates in the <a href="https://community.wmo.int/en/activity-areas/wis/template-examples" target="_blank">WMO template example</a>
+            Find the templates in the <a href="https://community.wmo.int/en/activity-areas/wis/template-examples">WMO template example</a>
           </p>
           <p style="text-align: left; ">
             <b>BUFR/CREX Checker Applications:</b>
           </p>
           <p style="text-align: left; ">
-            <li style="text-align: left"><a href="https://codes.ecmwf.int/bufr/validator" target="_blank">Latest BUFR Validation Tool – ECMWF BUFR Validator</a></li>
+            <li style="text-align: left"><a href="https://codes.ecmwf.int/bufr/validator">Latest BUFR Validation Tool – ECMWF BUFR Validator</a></li>
           </p>
           <p style="text-align: left; ">
           <b>GTS Bulletin Headers</b>
           </p>
           <p style="text-align: left; ">
-            <li style="text-align: left"><a href="docs/GTS_bulletin_headers.pdf" target="_blank">List of GTS Bulletin Headers for Data Buoys</a></li>
+            <li style="text-align: left"><a href="docs/GTS_bulletin_headers.pdf">List of GTS Bulletin Headers for Data Buoys</a></li>
           </p>
           <p style="text-align: left; ">
             Transitioning to WIS 2.0 represents a significant advancement in global data sharing, offering enhanced efficiency, accessibility, and support for data providers and users alike.
@@ -287,7 +273,7 @@ availability of meteorological and oceanographic information.
      <div class="fourparts-one";>
         <figure>
           <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
-          <a href="qc.html" target="_blank">
+          <a href="qc.html">
             <p style="text-align: center; ">Quality control of data</p>
           </a>
         </figure>
@@ -295,7 +281,7 @@ availability of meteorological and oceanographic information.
      <div class="fourparts-two">
         <figure>
           <img src="figures/thumbnail_contact_us.jpg" alt="related articles"/>
-          <a href="contact_us.html" target="_blank">
+          <a href="contact_us.html">
             <p style="text-align: center; ">Contact us</p>
           </a>
         </figure>
@@ -303,7 +289,7 @@ availability of meteorological and oceanographic information.
      <div class="fourparts-three">
         <figure>
           <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
-          <a href="etwork_status_and_map.html" target="_blank">
+          <a href="etwork_status_and_map.html">
             <p style="text-align: center; ">DBCP network</p>
           </a>
         </figure>
@@ -311,7 +297,7 @@ availability of meteorological and oceanographic information.
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
-          <a href="data_uses.html" target="_blank">
+          <a href="data_uses.html">
             <p style="text-align: center; ">Uses of buoy data</p>
           </a>
         </figure>
